fix the addCourse & addTeacher
we only need to resize the background picture because it's too big

--- a/FinalProject/WebServer/AddCourse/style.css
+++ b/FinalProject/WebServer/AddCourse/style.css
@@ -24,11 +24,20 @@ ul {
     font-size: 13px;
 }
 .background {
-  position: absolute;
-  width: 100%;
-  opacity: 0.9;
+      opacity:0.9;
+      width: 100%;
+    height: 100%;
+
+
   background: url('../Images/site_background.jpeg');
   background-repeat: no-repeat;
+}
+.size {
+   width: 100%;
+    height: 100%;
+    overflow: scroll;
+    overflow-x:hidden;
+    text-align: center ;
 }
 
 header .logo {
@@ -40,10 +49,9 @@ header .logo {
 
 
 section {
-    margin: 100px auto;     
+    margin: 20px auto;     
 
     width: 400px;   
-
     background-color: white;
 
     border-radius: 5px;
