--- a/FinalProject/WebServer/AddTeacher/style.css
+++ b/FinalProject/WebServer/AddTeacher/style.css
@@ -32,6 +32,14 @@ ul {
   background-repeat: no-repeat;
 }
 
+.size {
+   width: 100%;
+    height: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden;
+    text-align: center ;
+}
+
 header .logo {
     background: url('../Images/ratemyschool.png');
     width: 275px;
